--- a/schlüsseldienst style.css
+++ b/schlüsseldienst style.css
@@ -1,31 +1,67 @@
 *{
     margin-top: 0;
     margin-left: 0;
+    margin-right: 0
+    margin-bottom: 0;
     box-sizing: border-box;
 }
 
 
-.head {
+.header {
     position: relative;
-    margin-left: 0px;
-    margin-top: 0px;
-    border: 1px black solid;
+    top: 1px;
+
+    
+    
+    
+
+    
+
 
 }
 
 
-.logo {
+.Logo {
+    position: relative;
+    margin-left: 35px;
+    margin-top: 4px;
+    
+    
+}
 
+.info{
+    position: relative;
+    margin-right: 35px;
+    margin-top: 4px;
+    
 }
 
 
 
 
 .hero {
+    position: relative;
+    
+    
 
+}
+.hero img {
+    width: 100%;
+    height: 800px;
+    margin-bottom: 0;
+
+    
 }
 
 .crossing {
+    height: 70px;
+    border: 1px solid grey;
+    background: grey;
+    text-align: center;
+    font-size:medium;
+    
+    
+
 
 }
 
@@ -79,7 +115,16 @@
 
 }
 
+.footer{
+    margin-bottom: 0px;
+    height: 30px;
+    border: 3px solid black;
+    background-color: white;
+
+}
+
 .all_rights{
+    
 
 }
 
